# DocStart

./: README.md  main.py  pyproject.toml
src/docstart/: __main__.py  cli.py  requirements.txt  summarize.py
